# QT-

./: CMakeLists.txt  help.cpp  help.h  help.ui  input_deal.cpp  input_deal.h  input_judge.cpp  input_judge.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  option_success.cpp  option_success.h  option_success.ui  params_config1.cpp  params_config1.h  params_config1.ui  params_config2.cpp  params_config2.h  params_config2.ui  params_config3.cpp  params_config3.h  params_config3.ui  params_config4.cpp  params_config4.h  params_config4.ui
一些更精细的调参操作，但不用这个文件用前两个也可以实现/: form.cpp  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
一些更精细的调参操作，但不用这个文件用前两个也可以实现/part3/: form.h
算法部分/: main.cpp  parameter_adjustment_window  parameter_adjustment_window.cpp  parameter_practice.cpp  parameter_practice.h  parameter_window.cpp  parameter_window.h  run.cpp  run.h  untitled4.pro
